--- a/_posts/0000-01-02-Finthechat102104.md
+++ b/_posts/0000-01-02-Finthechat102104.md
@@ -2,5 +2,8 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-I don't really know what to put here (I'm new)
-Use the left arrow to go back!
+If your seeing this, then you are either relatively new to GitHub
+Or, you are experienced with GitHub to where you're looking down at what the newbies are doing
+If this is the case, then don't judge me
+This is my first time using GitHub
+I have no idea what I'm doing
